# sql-compare

./: .gitignore  .mergify.yml  README.md  poe.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yml
sql_compare/: __init__.py
tests/: __init__.py  test_sql_compare.py
tools/: poetry-install.sh  semgrep
