[tool.poetry]
name = "sql-compare"
version = "0.1.3"
description = "Compare SQL schemas"
authors = ["Charly Laurent <charly.laurent@mergify.com>"]
maintainers = ["Mergify <engineering@mergify.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Mergifyio/sql-compare"
keywords = ["sql", "database", "schema", "compare", "diff", "migration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
]

[tool.poetry.dependencies]
python = "^3.8"
sqlparse = ">=0.5.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.8,<0.9.0"
mypy = "^1.10.0"
pytest = "^8.2.2"
poethepoet = ">=0.26.1,<0.31.0"
deptry = ">=0.16.1,<0.21.0"
semgrep = "^1.75.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Mergifyio/sql-compare/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
include = ["poe.toml"]

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
preview = true
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "CPY",
    "C4",
    "DTZ",
    "EM",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "ERA",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = [
    # NOTE(charly): line-length is up to the formatter
    "E501",
    # NOTE(charly): `one-blank-line-before-class` (D203) and
    # `no-blank-line-before-class` (D211) are incompatible
    "D203",
    # NOTE(charly): `multi-line-summary-first-line` (D212) and
    # `multi-line-summary-second-line` (D213) are incompatible
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2
known-first-party = ["sql_compare"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
strict = true
warn_unreachable = true
exclude = [".venv"]
files = ["sql_compare", "tests"]
show_error_codes = true

[[tool.mypy.overrides]]
module = "sqlparse"
ignore_missing_imports = true

[tool.deptry]
extend_exclude = ["tests"]
